# zad2-RafalSzyinski1

./: CMakeLists.txt  README.md
inc/: complex.h  database.h
lib/googletest-master/docs/: advanced.md  faq.md  gmock_cook_book.md
src/: database.cpp  main.cpp
tst/: CMakeLists.txt  complex-test.cpp  main.cpp
